kube/base/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
  - name: pgadmin-port
    port: 80
    targetPort: 80
    nodePort: 30010
