kube/base/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  rules:
  - host: open-webui.minikube.local
    http:
      paths:
      - path: /pgadmin
        pathType: Prefix
        backend:
          service:
            name: open-webui-service
            port:
              number: 30010
